Add flexbox for sections

--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <link rel="stylesheet" href="./style.css">
     <title>Web Blog</title>
 </head>
+<header>
+</header>
+
 <body>
-    <h1>Welcome to my Web!</h1>
-    <h2>This is a line</h2>
+    <img class="logo" src="./public/img/coding.png" alt="logo">
+    <h1>Writings for Developers</h1>
+    <h2>Curated collection of articles for busy developers</h2>
+
+    <hr>
+    <div class="sections">
+        <p>JavaScrips</p>
+        <p>DevOps</p>
+        <p>Cloud</p>
+        <p>Terraform</p>
+        <p>Python</p>
+        <p>AI</p>
+        <p>Deepl Learning</p>
+    </div>
 </body>
+
 </html>
