Add flex to individual notes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +23,47 @@
         <p>Terraform</p>
         <p>Python</p>
         <p>AI</p>
-        <p>Deepl Learning</p>
+        <p>Deep Learning</p>
+        <p>Others</p>
+    </div>
+
+    <div class="notes">
+        <div class="note">
+            <img src="./public/img/note.jpg" alt="image">
+            <h3 id="title">Lorem</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, primi, est orci maecenas porttitor penatibus.</p>
+            <p id="foot">July 30, 2025 &nbsp; | &nbsp; Maaax</p>
+        </div>
+        <div class="note">
+            <img src="./public/img/note.jpg" alt="image">
+            <h3 id="title">Lorem</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, primi, est orci maecenas porttitor penatibus.</p>
+            <p id="foot">July 30, 2025 &nbsp; | &nbsp; Maaax</p>
+        </div>
+        <div class="note">
+            <img src="./public/img/note.jpg" alt="image">
+            <h3 id="title">Lorem</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, primi, est orci maecenas porttitor penatibus.</p>
+            <p id="foot">July 30, 2025 &nbsp; | &nbsp; Maaax</p>
+        </div>
+        <div class="note">
+            <img src="./public/img/note.jpg" alt="image">
+            <h3 id="title">Lorem</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, primi, est orci maecenas porttitor penatibus.</p>
+            <p id="foot">July 30, 2025 &nbsp; | &nbsp; Maaax</p>
+        </div>
+        <div class="note">
+            <img src="./public/img/note.jpg" alt="image">
+            <h3 id="title">Lorem</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, primi, est orci maecenas porttitor penatibus.</p>
+            <p id="foot">July 30, 2025 &nbsp; | &nbsp; Maaax</p>
+        </div>
+        <div class="note">
+            <img src="./public/img/note.jpg" alt="image">
+            <h3 id="title">Lorem</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, primi, est orci maecenas porttitor penatibus.</p>
+            <p id="foot">July 30, 2025 &nbsp; | &nbsp; Maaax</p>
+        </div>
     </div>
 </body>
 
