Add footer and header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Web Blog</title>
 </head>
 <header>
+    <p>writings.dev</p>
+    <p>categories</p>
+    <p>articles</p>
+    <p>about</p>
 </header>
 
 <body>
@@ -66,5 +70,9 @@
         </div>
     </div>
 </body>
+
+<footer>
+    <p>writings.dev</p>
+</footer>
 
 </html>
